# sort

./: .gitignore  CMakeLists.txt  README.md
genetic/: CmakeLists.txt
genetic/include/: profilerLib.h
genetic/source/: main.cpp
grafuri/: CMakeLists.txt
grafuri/include/: graf.h
grafuri/sources/: main.cpp
sort/: CMakeLists.txt
sources/: main.cpp  pairingHeap.h  pairingHeapMain.cpp
